<resources>
    <!--default-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="app_name">말해보시개 회의실</string>
    <!--string-->
    <string name="bottom_nav1_text">회의실</string>
    <string name="bottom_nav2_text">예약관리</string>
    <string name="bottom_nav3_text">프로필</string>
    <string name="detail_info_text">상세정보</string>
    <string name="reserve_text">예약하기</string>
    <string name="room_num_text">수용인원 : </string>
    <string name="room_text">회의실 : </string>
    <string name="register_text">담당자 :</string>
    <string name="date_select_text">날짜 선택</string>
    <string name="time_select_text">시간 선택</string>
    <string name="reservation_complete_text">예약완료</string>
    <string name="not_available_time_text">예약되어있는 시간</string>
    <string name="to_time_text">~</string>
    <string name="enter_conference_name_msg">회의명 입력해주세요</string>
    <string name="enter_officer_msg">담당자를 입력해주세요</string>
    <string name="select_both_date_time_msg">예약 날짜와 시간을 선택해주세요</string>
    <string name="select_date_first_msg">날짜를 먼저 선택해주세요</string>
    <string name="select_start_time_first_msg">시작시간을 먼저 선택해주세요</string>
    <string name="already_reserve_full_msg">해당 시간은 이미 예약이 찼습니다.</string>
    <string name="network_error_msg">네트워크가 연결되어 있지 않습니다</string>
    <string name="reserve_complete_msg">예약되었습니다.</string>
    <string name="reserve_fail_msg">예약을 실패했습니다.</string>
    <string name="select_another_time_msg">해당 시간은 불가합니다. 다른시간을 선택해주세요</string>
    <string name="status_text">현황</string>
    <string name="time_text">시간</string>
    <string name="conference_name">회의명</string>
    <string name="officer2_text">담당자</string>
    <string name="network_err_then_load_local_text">네트워크가 끊켜 있습니다. 로컬에서 불러옵니다</string>
    <string name="proceeding_text">진행중</string>
    <string name="reservation_text">예약</string>
    <string name="time_input_text">시간 :</string>
    <string name="content_name_text">회의명 :</string>
    <string name="reservation_cancel_text">예약취소</string>
    <string name="reservation_cancel_failure_text">예약 취소를 실패했습니다.</string>
    <string name="reservation_cancel_success_text">예약이 취소되었습니다.</string>
    <string name="no_text">아니요</string>
    <string name="yes_text">네</string>
    <string name="reservation_cancel_question_text">예약을 취소하시겠습니까?</string>
    <string name="conference_input_name_text">회의명 :</string>
    <string name="select_after_current_time_text">현재시간보다 이후의 시간을 선택해주세요</string>
    <string name="date_input_text">날짜 :</string>
    <string name="id_text">아이디</string>
    <string name="pw_text">비밀번호</string>
    <string name="revise_text">수정하기</string>
    <string name="enter_id_pw_text">아이디와 패스워드를 입력해주세요</string>
    <string name="profile_update_success_text">프로필이 수정되었습니다</string>
    <string name="id_duplicate_or_error_text">아이디 중복 또는 오류가 있습니다</string>
    <string name="qr_code_save_success_text">QR 코드가 저장되었습니다.</string>
    <string name="qr_code_save_fail_text">QR 코드 저장을 실패했습니다.</string>
    <string name="image_download_permission_denied_text">이미지 다운로드 권한이 거절되었습니다</string>
    <string name="image_download_permission_accept_text">이미지 다운로드 권한이 수락되었습니다.</string>
    <string name="qr_code_download_text">QR 코드 다운로드</string>
    <string name="auto_login_text">자동 로그인</string>
    <string name="login_fail_text">로그인에 실패했습니다</string>
    <string name="id_pw_length_max_text">아이디 비밀번호는 20자 이하로 해주세요.</string>
    <string name="bottom_nav4_text">옵션</string>
    <string name="logout_text">로그아웃</string>
    <string name="delete_cache_text">캐시 데이터 삭제</string>
    <string name="delete_cache_data_text">캐시 데이터를 삭제했습니다.</string>
    <string name="logout_question_text">로그아웃 하시겠습니까?</string>
    <string name="cache_delete_question_text">캐시 데이터를 삭제 하시겠습니까?</string>
    <string name="no_reservtion_result_text">예약내역이 없습니다</string>
    <string name="start_time_text">시작시간</string>
    <string name="end_time_text">종료시간</string>
    <string name="meeting_room_reservation_input_text">"회의실 예약 :"</string>
    <string name="meeting_room_search_text">회의실 이름 검색</string>
    <string name="start_time_select_text">시작시간 선택</string>
    <string name="end_time_select_text">종료시간 선택</string>
    <string name="alarm_setting_text">알람설정</string>
    <string name="business_code_enroll_text">회사코드 등록</string>
    <string name="business_code_enter_hint">회사코드 입력</string>
    <string name="business_code_example_text">BUSINESS_CODE_EXAMPLE</string>
    <string name="business_code_input_msg">코드를 입력해주세요</string>
    <string name="business_code_success_msg">코드가 등록되었습니다\n아이디, 비밀번호가 초기화됩니다</string>
    <string name="question_developer_text">문의 : tmddjs210@naver.com</string>
</resources>