<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.mtjin.free_room.model.MeetingRoom" />

        <variable
            name="myMeetingRoom"
            type="com.mtjin.free_room.model.MyMeetingRoom" />

        <variable
            name="vm"
            type="com.mtjin.free_room.views.reservation_detail.ReservationDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/toolbarTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_300dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_default_room"
                    app:layout_collapseMode="parallax"
                    bind:urlImage="@{item.image}" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginStart="@dimen/margin_8dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_28dp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/room_text"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:text="@{item.name}"
                    android:textSize="@dimen/text_size_20sp"
                    app:layout_constraintStart_toEndOf="@id/text_room"
                    app:layout_constraintTop_toTopOf="@id/text_room"
                    tools:text="서울" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/room_num_text"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/text_room"
                    app:layout_constraintTop_toBottomOf="@id/text_room" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:text="@{Integer.toString(item.num)}"
                    android:textSize="@dimen/text_size_20sp"
                    app:layout_constraintStart_toEndOf="@id/text_num"
                    app:layout_constraintTop_toTopOf="@id/text_num"
                    tools:text="8" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_input_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/register_text"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/text_room"
                    app:layout_constraintTop_toBottomOf="@id/text_num" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:text="@{myMeetingRoom.register}"
                    android:textSize="@dimen/text_size_20sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/text_input_register"
                    app:layout_constraintTop_toTopOf="@id/text_input_register"
                    tools:text="8" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_input_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/content_name_text"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/text_room"
                    app:layout_constraintTop_toBottomOf="@id/text_input_register" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:text="@{myMeetingRoom.content}"
                    android:textSize="@dimen/text_size_20sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/text_input_content"
                    app:layout_constraintTop_toTopOf="@id/text_input_content"
                    tools:text="8" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_input_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:text="@string/time_input_text"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/text_room"
                    app:layout_constraintTop_toBottomOf="@id/text_input_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:textSize="@dimen/text_size_20sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toEndOf="@id/text_input_time"
                    app:layout_constraintTop_toTopOf="@id/text_input_time"
                    bind:endTimestampSingle="@{myMeetingRoom.endTimestamp}"
                    bind:startTimestampSingle="@{myMeetingRoom.startTimestamp}"
                    tools:text="8" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:drawableEnd="@drawable/ic_calendar"
                    android:drawablePadding="@dimen/padding_12dp"
                    android:onClick="@{()->vm.showCalendar()}"
                    android:text="@string/date_select_text"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/text_room"
                    app:layout_constraintTop_toBottomOf="@id/text_input_time" />

                <TextView
                    android:id="@+id/tv_selected_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_4dp"
                    android:textColor="@color/colorWhiteBlue"
                    android:textSize="@dimen/text_size_20sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_select_date"
                    app:layout_constraintStart_toEndOf="@id/tv_select_date"
                    app:layout_constraintTop_toTopOf="@id/tv_select_date"
                    tools:text="2020.08.29" />

                <TextView
                    android:id="@+id/text_status"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:background="@color/colorWhiteBlue00E2FF"
                    android:gravity="center"
                    android:text="@string/status_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/text_time"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_select_date" />

                <View
                    android:id="@+id/view_divide_1"
                    android:layout_width="@dimen/width_2dp"
                    android:layout_height="0dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@id/text_status"
                    app:layout_constraintEnd_toStartOf="@id/text_time"
                    app:layout_constraintStart_toEndOf="@id/text_status"
                    app:layout_constraintTop_toTopOf="@id/text_status" />

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_50dp"
                    android:background="@color/colorWhiteBlue00E2FF"
                    android:gravity="center"
                    android:text="@string/time_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/text_content"
                    app:layout_constraintStart_toEndOf="@id/text_status"
                    app:layout_constraintTop_toTopOf="@id/text_status" />

                <View
                    android:id="@+id/view_divide_2"
                    android:layout_width="@dimen/width_2dp"
                    android:layout_height="0dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@id/text_status"
                    app:layout_constraintEnd_toStartOf="@id/text_content"
                    app:layout_constraintStart_toEndOf="@id/text_time"
                    app:layout_constraintTop_toTopOf="@id/text_status" />

                <TextView
                    android:id="@+id/text_content"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_50dp"
                    android:background="@color/colorWhiteBlue00E2FF"
                    android:gravity="center"
                    android:text="@string/conference_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/text_register"
                    app:layout_constraintStart_toEndOf="@id/text_time"
                    app:layout_constraintTop_toTopOf="@id/text_status" />

                <View
                    android:id="@+id/view_divide_3"
                    android:layout_width="@dimen/width_2dp"
                    android:layout_height="0dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="@id/text_status"
                    app:layout_constraintEnd_toStartOf="@id/text_register"
                    app:layout_constraintStart_toEndOf="@id/text_content"
                    app:layout_constraintTop_toTopOf="@id/text_status" />

                <TextView
                    android:id="@+id/text_register"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_marginEnd="12dp"
                    android:background="@color/colorWhiteBlue00E2FF"
                    android:gravity="center"
                    android:text="@string/officer2_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_content"
                    app:layout_constraintTop_toTopOf="@id/text_status" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_reservations"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:layout_marginEnd="@dimen/margin_12dp"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_status"
                    bind:setItems="@{vm.reservationList}"
                    tools:listitem="@layout/item_reservation_detail" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:backgroundTint="@color/colorWhiteBlue"
            android:contentDescription="@string/reserve_text"
            android:onClick="@{()->vm.goReservation()}"
            android:text="@string/reserve_text"
            android:textColor="@color/colorWhite"
            android:theme="@style/MaterialTheme"
            app:elevation="@dimen/elevation_4dp"
            app:icon="@drawable/ic_add_white_24dp"
            app:iconTint="@color/colorWhite"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end"
            app:pressedTranslationZ="@dimen/translation_12dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>